@startuml

title __EXCEPTIONS's Class Diagram__\n

  package umcarro.Controllers {
    package umcarro.Controllers.Exceptions {
      class DadosDeAcessoInvalidos {
          {static} - serialVersionUID : long
          + DadosDeAcessoInvalidos()
          + DadosDeAcessoInvalidos()
          + DadosDeAcessoInvalidos()
          + DadosDeAcessoInvalidos()
      }
    }
  }
  

  package umcarro.Controllers {
    package umcarro.Controllers.Exceptions {
      class NaoTemPedidos {
          {static} - serialVersionUID : long
          + NaoTemPedidos()
          + NaoTemPedidos()
          + NaoTemPedidos()
          + NaoTemPedidos()
      }
    }
  }
  

  package umcarro.Controllers {
    package umcarro.Controllers.Exceptions {
      class OpcaoInvalida {
          {static} - serialVersionUID : long
          + OpcaoInvalida()
          + OpcaoInvalida()
          + OpcaoInvalida()
          + OpcaoInvalida()
      }
    }
  }
  

  package umcarro.Controllers {
    package umcarro.Controllers.Exceptions {
      class SemVeiculosDisponiveis {
          {static} - serialVersionUID : long
          + SemVeiculosDisponiveis()
          + SemVeiculosDisponiveis()
          + SemVeiculosDisponiveis()
          + SemVeiculosDisponiveis()
      }
    }
  }
  

  DadosDeAcessoInvalidos -up-|> Serializable
  NaoTemPedidos -up-|> Serializable
  OpcaoInvalida -up-|> Serializable
  SemVeiculosDisponiveis -up-|> Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
